# coursework_4

./: .gitignore  pyproject.toml
config/: api_config.py
data/: data_base.json  data_currency.json  w_1__test.json
src/: apilayer.py  classes.py  function.py  json_saver.py  main.py  user_interaction.py  vacancy.py
work_data/: adress.py  vacancies.json
